    - Bumped Factory Search to latest version.
    - Bumped Far Reach to latest version.
    - Bumped Ghost Counter to latest version.
    - Bumped Milestones to latest version.
    - Bumped Pavement Drive Assist Continued to latest version.
    - Bumped Pipe Visualizer to latest version.
    - Bumped Quick Item Search to latest version.
    - Bumped Rate Calculator to latest version.
    - Enable use of artillery cluster remote for singular shots.
    - Modpack controls configuration for Blueprint Tools. SHIFT + arrows for nudging the blueprint, CONTROL + arrows for nudging blueprint grid, and CONTROL + SHIFT + arrow for nudging blueprint book grid.
    - Modpack controls configuration for Cursor Enhancements. Quick craft key binding is disabled (Crafting Tools provides for better quantity control).
    - Modpack controls configuration for Pipe Visualizer. SHIFT + P for switch colour mode, CONTROL + P for toggling mouseover visualisation, CONTROL + SHIFT + P for toggling overlay. Visualize selected is unbound.
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-07-26
  Features:
    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")
    - Automatically fill buildings and vehicles with fuel when placing them down (via "Fill4Me")
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-20
  Changes: