@@ -51,22 +51,22 @@
         "QuickMapTag >= 0.3.1",
         "RateCalculator >= 3.2.5",
         "RealisticFlashlight >= 0.2.4",
-        "RecipeBook >= 3.4.5",
+        "RecipeBook >= 3.5.8",
         "Renamer >= 2.1.7",
-        "resourcehighlighter-dark >= 2.0.6",
+        "resourcehighlighter-dark >= 2.5.2",
         "rotate-vehicles >= 0.0.7",
-        "Shortcuts-ick >= 1.1.27",
-        "ShuttleTrainRefresh >= 1.1.7",
-        "SpidertronEnhancements >= 1.8.5",
-        "SpidertronPatrols >= 2.2.5",
+        "Shortcuts-ick >= 1.1.28",
+        "ShuttleTrainRefresh >= 1.2.0",
+        "SpidertronEnhancements >= 1.9.2",
+        "SpidertronPatrols >= 2.4.10",
         "Squeak Through >= 1.8.2",
-        "Tapeline >= 2.0.8",
-        "TaskList >= 0.4.2",
+        "Tapeline >= 2.0.10",
+        "TaskList >= 0.4.8",
         "ThickerLines >= 0.0.5",
         "tinted-spaceship >= 1.0.2",
-        "TrainGroups >= 1.1.4",
+        "TrainGroups >= 1.4.3",
         "VilsClearNightvision >= 1.0.1",
         "whats-missing >= 0.1.14",
-        "YARM >= 0.8.207"
+        "YARM >= 0.10.14"
     ]
 }
